# cdn

./: .dockerignore  .env.example  .gitignore  CUSTOM_DOMAIN.md  Cargo.toml  Dockerfile  Dockerfile.hetzner-proxy  Gemfile  MIGRATION_GUIDE.md  README.md  build.rs  bun.lockb  docker-compose.yml  index.js  logger.js  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
api/: new.js  new.ts  newSingle.ts
api/v1/: new.ts  newSingle.ts
api/v2/: deploy.ts  new.ts  upload.ts  utils.ts
app/components/: base.rb  header_bar.rb  inspector.rb
app/components/admin/search/: index.rb
app/components/admin/users/: show.rb
app/components/api_keys/: _row.rb  index.rb
app/components/docs/: content.rb  page.rb  sidebar.rb
app/components/static_pages/: base.rb  home.rb  logged_out.rb
app/components/uploads/: _row.rb  index.rb  new.rb
app/controllers/: api_keys_controller.rb  application_controller.rb  docs_controller.rb  external_uploads_controller.rb  sessions_controller.rb  static_pages_controller.rb  uploads_controller.rb
app/controllers/admin/: api_keys_controller.rb  application_controller.rb  search_controller.rb  uploads_controller.rb  users_controller.rb
app/controllers/api/v4/: api_keys_controller.rb  application_controller.rb  uploads_controller.rb  users_controller.rb
app/controllers/slack/: events_controller.rb
app/frontend/controllers/: batch_select.js  upload_dropzone.js
app/frontend/entrypoints/: application.js  application.scss
app/frontend/styles/: admin_tool.scss  file_dropzone.scss  hca.scss
app/helpers/: application_helper.rb  quota_helper.rb
app/jobs/: process_slack_file_upload_job.rb  refresh_cdn_stats_job.rb
app/models/: api_key.rb  application_record.rb  doc_page.rb  quota.rb  upload.rb  user.rb
app/models/concerns/: public_identifiable.rb
app/policies/: api_key_policy.rb  application_policy.rb  upload_policy.rb
app/services/: batch_upload_service.rb  cdn_stats_service.rb  flavor_text_service.rb  hca_service.rb  quota_service.rb  slack_service.rb
app/views/: base.rb
app/views/admin/search/: index.html.erb
app/views/admin/users/: show.html.erb
app/views/api_keys/: index.html.erb
app/views/docs/: show.html.erb
app/views/docs/pages/: api.md  getting-started.md  privacy.md  quotas.md  terms.md  using-cdn-urls.md  what-happened.md
app/views/errors/: internal_server_error.html.erb
app/views/layouts/: application.html.erb
app/views/pwa/: manifest.json.erb
app/views/slack/: upload_error.slack_message.slocks  upload_success.slack_message.slack_blocks  upload_success.slack_message.slocks
app/views/static_pages/: home.html.erb  login.html.erb
app/views/uploads/: index.html.erb  new.html.erb
cdn/: Cargo.toml
cdn/src/: main.rs
cdn/src/api/: mod.rs  modals.rs
cdn/src/auth/: middleware.rs  mod.rs  oauth.rs  session.rs
cdn/src/dashboard/: mod.rs
cdn/src/db/: mod.rs  schema.rs
cdn/src/delegate/: error.rs  mod.rs
cdn/src/gateways/: files.rs  legacy.rs  mod.rs
cdn/src/metrics/: mod.rs
config/: application.rb  brakeman.ignore  credentials.yml.enc  database.yml  recurring.yml  routes.rb  storage.yml
config/environments/: development.rb  production.rb  test.rb
config/initializers/: active_storage.rb  blind_index.rb  content_security_policy.rb  git_commit.rb  hack_club_auth.rb  hashid.rb  inflections.rb  lockbox.rb  omniauth.rb  phlex.rb  primer.rb  sentry.rb  slack.rb
db/: schema.rb  seeds.rb
db/migrate/: 20260127174404_create_users.rb  20260127_add_slack_id_to_users.rb  20260129051531_create_uploads.rb  20260129201832_create_api_keys.rb  20260130161152_add_quota_policy_to_users.rb
hetzner-proxy/: Cargo.toml
hetzner-proxy/src/: db.rs  main.rs
lib/tasks/: copy_to_pub.rake  del_old.rake  fix_content_disposition.rake  import_slack_files.rake  migrate_storage_keys.rake
proxy/: Dockerfile  bucket.conf
src/: api.js  backblaze.js  compress.js  env.ts  fileUpload.js  index.ts  logger.ts  main.rs  middleware.ts  schemas.ts  storage.js  storage.ts  upload.js  utils.js
src/api/: deploy.js  index.js  mod.rs  upload.js  utils.js
src/config/: logger.js  messages.js
src/delegate/: mod.rs
src/gateways/: legacy.rs  mod.rs
src/metrics/: mod.rs  store.rs
src/routes/: upload.ts
test/: test_helper.rb
test/controllers/: api_keys_controller_test.rb
test/controllers/api/v4/: uploads_controller_test.rb  users_controller_test.rb
test/fixtures/: api_keys.yml  users.yml
test/models/: api_key_test.rb
